# RShellCopy

./: .gitignore  Assign4Writeup  CMakeLists.txt  bashTest.sh
src/: AND.cpp  AND.h  Base.h  Connector.cpp  Connector.h  Container.cpp  Container.h  Execution.cpp  Execution.h  Input.cpp  Input.h  InputFile.cpp  InputFile.h  OR.cpp  OR.h  OutputAppend.cpp  OutputAppend.h  OutputFile.cpp  OutputFile.h  OutputOverride.cpp  OutputOverride.h  Pipe.cpp  Pipe.h  Semicolon.cpp  Semicolon.h  Subshell.cpp  Subshell.h  Test.cpp  Test.h  Tokenizer.cpp  Tokenizer.h  TreeBuilder.cpp  TreeBuilder.h  main.cpp
tests/: test.cpp  testInjector.h
